0031315: Visualization - marker texture is lost after multi-textured object

OpenGl_Context::BindTextures() now iterates over pair of texture sets
considering inconsistent texture unit ranges.