src/Graphic3d/Graphic3d_TextureSet.hxx
@@ -18,6 +18,7 @@
 #include <NCollection_Array1.hxx>
 
 //! Class holding array of textures to be mapped as a set.
+//! Textures should be defined in ascending order of texture units within the set.
 class Graphic3d_TextureSet : public Standard_Transient
 {
   DEFINE_STANDARD_RTTIEXT(Graphic3d_TextureSet, Standard_Transient)
